feat: Enhance SEO and accessibility features in index.html
- Updated meta tags for improved SEO, including keywords and descriptions.
- Added Open Graph and Twitter Card meta tags for better social media sharing.
- Implemented preconnect and preload links for performance optimization.
- Added initial styles to prevent flash of unstyled content.

chore: Update package.json and pnpm-lock.yaml for dependency management

- Added new scripts for performance analysis and UI testing.
- Updated dependencies and removed unnecessary comments.
- Ensured consistency in devDependencies and added new packages.

fix: Improve TypeScript configurations for better type safety

- Enhanced tsconfig.json with stricter type checks and performance optimizations.
- Updated tsconfig.node.json to improve build performance and debugging support.

feat: Extend React type definitions for ARIA attributes

- Added definitions for aria-selected, aria-busy, aria-hidden, and aria-current to improve accessibility.

chore: Refactor Vite and Vitest configurations for better performance

- Simplified logger implementation in vite.config.ts to avoid circular dependencies.
- Enhanced vitest.config.ts with improved test performance settings and coverage reporting.

--- a/.env.example
+++ b/.env.example
@@ -1,54 +1,68 @@
 # =============================================================================
-# 佐渡で食えっちゃ - 環境変数設定ファイル
+# 佐渡で食えっちゃ - 環境変数設定ファイル（サンプル）
 # =============================================================================
 
-# ==== 必須設定項目 ====
+# ===== 必須設定項目 =====
 # -----------------------------------------------------------------------------
+# 以下の項目はアプリケーションの動作に必要な必須設定項目です
 
-# Google Maps API Key（必須） - 地図表示と位置情報機能に必要
-VITE_GOOGLE_API_KEY=your_maps_api_key_here
+# Google Maps API Key - 地図表示と位置情報機能に必要
+VITE_GOOGLE_API_KEY=your_google_maps_api_key_here
 
-# Google Sheets ID（必須） - POI（スポット）データ管理用スプレッドシート
-VITE_GOOGLE_SPREADSHEET_ID=your_spreadsheet_id_here
+# Google Maps 設定
+VITE_GOOGLE_MAPS_VERSION=quarterly
+VITE_GOOGLE_MAPS_LIBRARIES=places,geometry,marker
 
-# ==== 基本アプリケーション設定 ====
-# -----------------------------------------------------------------------------
-# PWA設定
-VITE_APP_NAME=佐渡で食えっちゃ         # アプリ正式名称（マニフェスト用）
-VITE_APP_SHORT_NAME=食えっちゃ         # ホーム画面表示用の短縮名
-VITE_APP_DESCRIPTION=佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。
-
-# ==== 拡張機能設定（任意） ====
-# -----------------------------------------------------------------------------
-# Google Maps カスタムスタイル用 Map ID（任意）
+# Google Maps カスタムスタイル用 Map ID
 VITE_GOOGLE_MAPS_MAP_ID=your_map_id_here
 
-# EmailJS関連設定（問い合わせフォーム機能を利用する場合に設定）
+# データソース設定
+VITE_APP_USE_GOOGLE_SHEETS=true
+
+# Google Sheets ID - POI（スポット）データ管理用スプレッドシート
+VITE_GOOGLE_SPREADSHEET_ID=your_spreadsheet_id_here
+
+# ===== アプリケーション設定 =====
+# -----------------------------------------------------------------------------
+# アプリケーションの基本情報と動作設定
+
+# PWA設定
+VITE_APP_NAME=佐渡で食えっちゃ      # アプリ正式名称（マニフェスト用）
+VITE_APP_SHORT_NAME=食えっちゃ      # ホーム画面表示用の短縮名
+VITE_APP_DESCRIPTION=佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。
+
+# 環境設定
+VITE_NODE_ENV=development
+
+# ===== 拡張機能設定 =====
+# -----------------------------------------------------------------------------
+# 追加機能のための設定（必要に応じて）
+
+# EmailJS関連設定（問い合わせフォーム機能用）
 VITE_EMAILJS_SERVICE_ID=your_emailjs_service_id_here
 VITE_EMAILJS_TEMPLATE_ID=your_emailjs_template_id_here
 VITE_EMAILJS_PUBLIC_KEY=your_emailjs_public_key_here
 
-# ==== デプロイメント設定 ====
+# ===== デプロイメント設定 =====
 # -----------------------------------------------------------------------------
-# ベースパス - GitHub Pagesでのルートパス
-# GitHub Actionsでは自動的に設定されるため手動設定は通常不要
+# デプロイ環境用の設定
+
+# ベースパス - GitHub Pagesでのルートパス（GitHub Actions経由で自動設定可能）
 BASE_PATH=/
 
-# ビルドモード - 通常はGitHub Actionsで自動設定されるためコメントアウト
-# NODE_ENV=production
-
 # =============================================================================
-# 環境変数のセットアップ手順
+# 環境変数の設定手順
 # =============================================================================
-# 1. 開発環境: このファイルを「.env」という名前でコピー
-# 2. コピーした.envファイルに実際の値を設定
-# 3. .envファイルはGitにコミットしないこと（.gitignoreに記載済み）
+# 1. このファイル（.env.example）を「.env」という名前でコピーする
+# 2. .envファイルの「your_*_here」を実際の値に置き換える
+# 3. 必須項目がすべて正しく設定されていることを確認する
 #
 # 本番環境（GitHub Pages）:
-# - API KeyなどはGitHub Secretsに設定し、GitHub Actions経由で自動取得
-# - GitHub Actionsのワークフローで環境変数が自動的に注入される
+# - API Keyなどの機密情報はGitHub Secretsに設定し、Actions経由で注入する
+# - GitHub Actionsのワークフローで環境変数が自動的に設定される
 #
 # 注意事項:
+# - .envファイルは.gitignoreに記載しGitにコミットしないこと
 # - VITE_プレフィックスの環境変数のみクライアントコードで利用可能
 # - すべての環境変数はビルド時に静的に埋め込まれる
 # - 機密情報（APIキーなど）を公開リポジトリにコミットしないこと
