--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,29 @@
 # ==============================================================================
-# 依存関係 - npm/pnpm管理ファイル
+# 依存関係 - npm/pnpm/yarn管理ファイル
 # ==============================================================================
 node_modules/
 .npm
+.pnpm-store/
+
+# ==============================================================================
+# ログファイル - 統合版
+# ==============================================================================
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-store/
+lerna-debug.log*
 .pnpm-debug.log*
 
 # ==============================================================================
 # ビルド出力 - GitHub Pages向け設定
 # ==============================================================================
 dist/
+dist-ssr/
 build/
 .vite/
+*.local
 coverage/
 *.tsbuildinfo
 stats.html
@@ -22,10 +31,23 @@ stats.html
 .temp-optimized/
 
 # ==============================================================================
+# テスト関連
+# ==============================================================================
+/coverage/
+/.nyc_output/
+test-results/
+playwright-report/
+/playwright/.cache/
+/vitest-coverage/
+__snapshots__/
+.vitest-cache/
+
+# ==============================================================================
 # 環境変数 - セキュリティとCI/CD
 # ==============================================================================
 .env*
 !.env.example
+!.env.local.example
 # GitHub Actions用シークレット（ローカルテスト用）
 .github/secrets/
 
@@ -36,10 +58,17 @@ stats.html
 !.vscode/extensions.json
 !.vscode/settings.json
 !.vscode/launch.json
+!.vscode/tasks.json
 .idea/
 *.sublime-*
 *.swp
 *.swo
+*~
+.project
+.classpath
+*.iml
+*.ipr
+*.iws
 
 # ==============================================================================
 # OS生成ファイル
@@ -47,6 +76,10 @@ stats.html
 .DS_Store
 Thumbs.db
 Desktop.ini
+.directory
+$RECYCLE.BIN/
+ehthumbs.db
+ehthumbs_vista.db
 
 # ==============================================================================
 # キャッシュと一時ファイル
@@ -57,7 +90,15 @@ Desktop.ini
 .parcel-cache
 .rpt2_cache/
 .rts2_cache*/
-.local
+.local/
+.rollup.cache/
+.turbo/
+.wireit/
+.temp/
+tmp/
+*.bak
+*.tmp
+*~
 
 # ==============================================================================
 # セキュリティ関連ファイル
@@ -69,6 +110,8 @@ Desktop.ini
 # 認証情報を含む可能性のあるファイル
 *auth*config*
 *credentials*
+*.p12
+*.pfx
 
 # ==============================================================================
 # GitHub Pages特有の除外設定
@@ -77,6 +120,7 @@ Desktop.ini
 _site/
 .jekyll-cache/
 .jekyll-metadata
+.jekyll-nowdocs/
 
 # ==============================================================================
 # PWA関連
@@ -86,31 +130,26 @@ dev-dist/
 **/sw.js.map
 **/workbox-*.js
 **/workbox-*.js.map
+**/service-worker.js
+**/*.js.LICENSE.txt
 
 # ==============================================================================
-# ログとデバッグファイル
+# モバイル・ハイブリッドアプリ関連
 # ==============================================================================
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
+android/app/build/
+ios/build/
+ios/Pods/
+capacitor.config.*.json
+!capacitor.config.json
+.sourcemaps/
 
 # ==============================================================================
-# テスト関連
+# プロジェクト固有の一時ファイル
 # ==============================================================================
-/coverage
-/.nyc_output
-test-results/
-playwright-report/
-/playwright/.cache/
-
-# ==============================================================================
-# 一時ファイルとバックアップ
-# ==============================================================================
-*~
-*.bak
-*.tmp
-.temp/
-tmp/
+# プロジェクト内で生成される分析データやデバッグ情報
+.analyze/
+size-plugin.json
+bundle-stats.json
+.lighthouse/
+.local/lighthouse/
+.local/*benchmark*
