--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -22,16 +22,20 @@
     "exactOptionalPropertyTypes": true, // オプショナルプロパティの型チェックを厳密化
     "noImplicitReturns": true, // すべての関数で戻り値を明示的に定義
     "noFallthroughCasesInSwitch": true, // switch文のフォールスルーを防止
+    "allowUnreachableCode": false, // 到達不可能なコードを禁止
+    "noUncheckedIndexedAccess": true, // インデックスアクセスの型安全性を強化
 
     // デバッグ支援の改善
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true, // 型定義ファイルのソースマップ生成
+    "pretty": true, // エラーメッセージを整形して表示
 
     // ビルドパフォーマンス向上
     "incremental": true,
     "tsBuildInfoFile": "./.tsbuildinfo",
     "skipDefaultLibCheck": true, // デフォルトライブラリのチェックをスキップ
+    "assumeChangesOnlyAffectDirectDependencies": true, // ビルドパフォーマンス最適化
 
     // パスエイリアスの活用（code_optimization_guidelinesに記載された推奨事項）
     "baseUrl": ".",
@@ -46,5 +50,5 @@
     "env.d.ts",
     "scripts/*.ts"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", ".tsbuildinfo"]
 }
