feat: ESLint設定にプラグインを追加し、lintコマンドを修正 fix: CheckboxGroupコンポーネントのチェックボックスの状態管理を改善 style: グローバルCSSのフォントファミリーの引用符を統一 refactor: useGoogleMapsフックでのマップIDの取得方法を修正 fix: CSVパーサーでヘッダー行の存在を確認し、エラーログを追加 fix: ロガーのログレベルチェックを強化し、サンプリングレートの処理を改善 fix: マーカーのフィット処理での条件を強化 chore: tsconfig.jsonの除外リストにvite.config.tsとvitest.config.tsを追加

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "analyze": "cross-env ANALYZE=true vite build",
     "// コード品質": "----------------------------",
     "format": "prettier --write .",
-    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" --ignore-pattern \"dev-dist/**\" --fix",
+    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" --ignore-pattern \"dev-dist/**\" --fix --config eslint.config.js",
     "lint:unused": "pnpm dlx depcheck",
     "lint:all": "pnpm lint && pnpm format && pnpm typecheck",
     "typecheck": "tsc --noEmit",
