Add logging guidelines and implement POI data conversion and state management hooks
- Created a comprehensive logging guideline document in `logger_usage_guidelines.md` to standardize logging practices across the project.
- Implemented `usePOIConverter` hook for converting POI data to PointOfInterest type with logging for validation.
- Developed `usePOIState` hook to manage the selection and filtering of POIs, including detailed logging for actions taken.

--- a/package.json
+++ b/package.json
@@ -75,8 +75,10 @@
     "@googlemaps/markerclusterer": "^2.5.3",
     "@mui/material": "^7.0.1",
     "@react-google-maps/api": "^2.20.6",
+    "@types/dotenv": "^8.2.3",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "idb": "^8.0.2",
     "lodash-es": "^4.17.21",
     "react": "^19.1.0",
