feat: update TypeScript configuration for improved type checking and performance optimizations
- Added WebWorker library to tsconfig.json for enhanced web worker support.
- Refined strict type checking options in tsconfig.json and tsconfig.node.json.
- Updated path aliases in tsconfig files for better code organization.
- Enhanced Vite configuration with structured logging and performance measurement utilities.
- Improved environment variable validation with detailed error handling and logging.
- Refactored Vitest configuration to utilize the new logger and environment variable utilities.
- Optimized caching strategies for Google Maps API in PWA settings.

--- a/.env.example
+++ b/.env.example
@@ -6,55 +6,83 @@
 # -----------------------------------------------------------------------------
 # 以下の項目はアプリケーションの動作に必要な必須設定項目です
 
+# ==== Google Maps関連設定 ====
 # Google Maps API Key - 地図表示と位置情報機能に必要
 # 型: string
 VITE_GOOGLE_API_KEY=your_google_maps_api_key_here
 
-# Google Maps 設定
-# 型: string
-VITE_GOOGLE_MAPS_VERSION=quarterly
-# 型: string（カンマ区切りリスト）
-VITE_GOOGLE_MAPS_LIBRARIES=places,geometry,marker
-
-# Google Maps カスタムスタイル用 Map ID
+# Google Maps MapID - カスタムスタイル用
 # 型: string
 VITE_GOOGLE_MAPS_MAP_ID=your_map_id_here
 
-# 機能フラグ設定
+# Google Maps API バージョン
+# 型: string ('weekly'|'quarterly'|'latest'|バージョン番号)
+VITE_GOOGLE_MAPS_VERSION=quarterly
+
+# Google Maps ライブラリ
+# 型: string（カンマ区切りリスト）
+VITE_GOOGLE_MAPS_LIBRARIES=places,geometry,marker
+
+# API キー制限の設定状況（セキュリティ対策）
+# 型: 'true' | 'false'（文字列として）
+VITE_GOOGLE_API_KEY_RESTRICTIONS=true
+
+# ==== データソース設定 ====
+# データソースの選択（Google Sheetsを使用するかCSVを使用するか）
 # 型: 'true' | 'false'（文字列として）
 VITE_ENABLE_GOOGLE_SHEETS=true
 
-# Google Sheets ID - POI（スポット）データ管理用スプレッドシート（Google Sheetsが有効な場合に必要）
+# Google Sheets ID - POI（スポット）データ管理用
 # 型: string
 VITE_GOOGLE_SPREADSHEET_ID=your_spreadsheet_id_here
 
-# ===== アプリケーション設定 =====
-# -----------------------------------------------------------------------------
-# アプリケーションの基本情報と動作設定
+# ==== ロギング設定 ====
+# ログレベル設定
+# 型: 'debug' | 'info' | 'warn' | 'error'
+VITE_LOG_LEVEL=info
 
-# PWA設定
+# デバッグモード有効フラグ
+# 型: 'true' | 'false'（文字列として）
+VITE_DEBUG_MODE=false
+
+# パフォーマンス測定のしきい値（ms）
+# 型: number（文字列として）
+VITE_LOG_PERFORMANCE_THRESHOLD=100
+
+# ===== 機能フラグ設定 =====
+# -----------------------------------------------------------------------------
+# 特定機能の有効/無効を制御
+
+# マーカークラスタリング（多数のマーカーを自動的にグループ化）
+# 型: 'true' | 'false'（文字列として）
+VITE_ENABLE_MARKER_CLUSTERING=true
+
+# オフラインモード（データのキャッシュと限定機能の有効化）
+# 型: 'true' | 'false'（文字列として）
+VITE_ENABLE_OFFLINE_MODE=false
+
+# ===== アプリケーション情報 =====
+# -----------------------------------------------------------------------------
+# アプリケーションの基本情報と表示設定
+
+# アプリケーション名
 # 型: string
-VITE_APP_NAME=佐渡で食えっちゃ      # アプリ正式名称（マニフェスト用）
-VITE_APP_SHORT_NAME=食えっちゃ      # ホーム画面表示用の短縮名
+VITE_APP_NAME=佐渡で食えっちゃ
+
+# アプリケーション短縮名（PWA用）
+# 型: string
+VITE_APP_SHORT_NAME=食えっちゃ
+
+# アプリケーション説明
+# 型: string
 VITE_APP_DESCRIPTION=佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。
 
-# 環境設定
+# アプリケーションバージョン
 # 型: string
-VITE_APP_VERSION=1.0.0  # アプリケーションのバージョン番号
-VITE_APP_BUILD_DATE=$(date +%Y-%m-%dT%H:%M:%S)  # ビルド日時（自動生成）
+VITE_APP_VERSION=1.0.0
 
-# ログ設定
-# 型: 'error' | 'warn' | 'info' | 'debug'（小文字）
-VITE_LOG_LEVEL=info  # ログレベル
-
-# デバッグ設定
-# 型: 'true' | 'false'（文字列として）
-VITE_DEBUG_MODE=false  # デバッグモード有効フラグ
-
-# ===== 拡張機能設定 =====
+# ===== 通信設定 =====
 # -----------------------------------------------------------------------------
-# 追加機能のための設定（必要に応じて）
-
 # EmailJS関連設定（問い合わせフォーム機能用）
 # 型: string
 VITE_EMAILJS_SERVICE_ID=your_emailjs_service_id_here
@@ -65,7 +93,7 @@ VITE_EMAILJS_PUBLIC_KEY=your_emailjs_public_key_here
 # -----------------------------------------------------------------------------
 # デプロイ環境用の設定
 
-# ベースパス - GitHub Pagesでのルートパス（GitHub Actions経由で自動設定可能）
+# ベースパス - GitHub Pagesでのルートパス
 # 型: string
 BASE_PATH=/
 
