--- a/.github/workflows/deploy-vite-app.yml
+++ b/.github/workflows/deploy-vite-app.yml
@@ -93,19 +93,69 @@ jobs:
           // 警告やエラーがあれば出力
           if (warnings.length > 0) {
             console.warn('⚠️ 環境変数の警告:');
-            warnings.forEach(warning => console.warn(`- ${warning}`));
+            warnings.forEach(warning => console.warn(`  - ${warning}`));
           }
-
+          
+          // エラーがあれば出力して終了
           if (errors.length > 0) {
             console.error('❌ 環境変数のエラー:');
-            errors.forEach(error => console.error(`- ${error}`));
-            process.exit(1);
+            errors.forEach(error => console.error(`  - ${error}`));
+            process.exit(1); // 非ゼロ終了コードでエラーを示す
           }
 
-          console.log('✅ 環境変数の検証に成功しました');
+          // Google Maps API Key の追加検証
+          if (process.env.VITE_GOOGLE_API_KEY) {
+            if (process.env.VITE_GOOGLE_API_KEY.length < 20) {
+              warnings.push('VITE_GOOGLE_API_KEY が短すぎる可能性があります（通常は 39 文字）');
+            }
+            
+            // 本番環境での制限確認
+            if (process.env.CI && process.env.NODE_ENV === 'production' && !process.env.VITE_GOOGLE_API_KEY_RESTRICTIONS) {
+              warnings.push('本番環境では VITE_GOOGLE_API_KEY に HTTP リファラー制限を設定することを推奨します');
+            }
+          }
+
+          // Map ID の形式検証
+          if (process.env.VITE_GOOGLE_MAPS_MAP_ID && !/^[0-9a-f]+$/.test(process.env.VITE_GOOGLE_MAPS_MAP_ID)) {
+            warnings.push('VITE_GOOGLE_MAPS_MAP_ID の形式が不正な可能性があります（16進数文字列）');
+          }
+          
+          // EmailJS関連の追加検証
+          if (process.env.VITE_EMAILJS_PUBLIC_KEY && process.env.VITE_EMAILJS_PUBLIC_KEY.length < 8) {
+            warnings.push('VITE_EMAILJS_PUBLIC_KEY が短すぎる可能性があります');
+          }
+
+          // すべての検証に成功したことを報告
+          if (errors.length === 0 && warnings.length === 0) {
+            console.log('✅ すべての環境変数が正常に設定されています');
+          } else if (errors.length === 0) {
+            console.log('✅ 必須環境変数は設定されていますが、警告があります');
+          }
+          
+          // 最終結果を出力（CI環境でのログ収集用）
+          console.log(JSON.stringify({
+            timestamp: new Date().toISOString(),
+            status: errors.length === 0 ? 'success' : 'error',
+            environment: process.env.NODE_ENV || 'development',
+            errorCount: errors.length,
+            warningCount: warnings.length,
+          }));
           EOF
           
+          # スクリプトに実行権限を付与
           chmod +x scripts/verify-env.js
+          
+      - name: Verify environment variables
+        run: node scripts/verify-env.js
+        env:
+          NODE_ENV: production
+          # 環境変数セットはワークフローのsecretsから取得
+          VITE_GOOGLE_API_KEY: ${{ secrets.VITE_GOOGLE_API_KEY }}
+          VITE_GOOGLE_MAPS_MAP_ID: ${{ secrets.VITE_GOOGLE_MAPS_MAP_ID }}
+          VITE_EMAILJS_SERVICE_ID: ${{ secrets.VITE_EMAILJS_SERVICE_ID }}
+          VITE_EMAILJS_TEMPLATE_ID: ${{ secrets.VITE_EMAILJS_TEMPLATE_ID }}
+          VITE_EMAILJS_PUBLIC_KEY: ${{ secrets.VITE_EMAILJS_PUBLIC_KEY }}
+          VITE_GOOGLE_API_KEY_RESTRICTIONS: ${{ secrets.VITE_GOOGLE_API_KEY_RESTRICTIONS }}
 
       - name: Build
         env:
