--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
   "scripts": {
     "// 開発関連": "----------------------------",
     "dev": "cross-env NODE_ENV=development vite",
-    "predev": "node scripts/validate-env.js",
+    "predev": "node scripts/comprehensive-env-check.js",
     "dev:verbose": "cross-env NODE_ENV=development VITE_LOG_LEVEL=debug vite",
     "dev:quiet": "cross-env NODE_ENV=development VITE_LOG_LEVEL=warn vite",
     "dev:debugmode": "cross-env NODE_ENV=development VITE_DEBUG_MODE=true VITE_LOG_LEVEL=debug vite",
+    "dev:maps": "cross-env NODE_ENV=development VITE_LOG_LEVEL=debug VITE_MEASURE_MAP_PERFORMANCE=true vite",
     "preview": "vite preview",
     "start": "vite preview",
     "// ビルド関連": "----------------------------",
     "build": "vite build",
-    "prebuild": "node scripts/validate-env.js",
+    "prebuild": "node scripts/comprehensive-env-check.js",
     "build:dev": "cross-env NODE_ENV=development vite build",
     "build:prod": "cross-env NODE_ENV=production vite build",
     "build:analyze": "cross-env ANALYZE=true MINIFY=true vite build",
     "build:report": "cross-env ANALYZE=true REPORT_JSON=true vite build",
-    "build:minify": "cross-env NODE_ENV=production MINIFY=true vite build",
+    "build:maps": "cross-env NODE_ENV=production VITE_OPTIMIZE_MAPS=true VITE_ENABLE_MARKER_CLUSTERING=true vite build",
+    "build:maps:dev": "cross-env NODE_ENV=development VITE_OPTIMIZE_MAPS=true VITE_ENABLE_MARKER_CLUSTERING=true vite build",
     "build:pwa": "cross-env NODE_ENV=production ENABLE_PWA=true vite build",
-    "build:images": "cross-env NODE_ENV=production OPTIMIZE_IMAGES=true vite build",
     "build:offline": "cross-env NODE_ENV=production ENABLE_PWA=true ENABLE_OFFLINE=true vite build",
-    "analyze": "cross-env ANALYZE=true vite build",
     "// コード品質": "----------------------------",
     "format": "prettier --write .",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" --ignore-pattern \"dev-dist/**\" --fix --config eslint.config.js",
@@ -39,16 +39,16 @@
     "typecheck:ci": "cross-env CI=true tsc --noEmit",
     "// テスト関連": "----------------------------",
     "test": "vitest run",
-    "pretest": "node scripts/validate-env.js",
+    "pretest": "node scripts/comprehensive-env-check.js",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:a11y": "vitest run a11y",
+    "test:maps": "vitest run --config vitest.maps.config.ts",
     "test:ui": "vitest --ui",
     "test:ci": "cross-env CI=true VITE_LOG_LEVEL=error vitest run",
     "// パフォーマンス関連": "----------------------------",
-    "analyze:bundle": "cross-env ANALYZE=true vite build",
-    "analyze:runtime": "cross-env NODE_ENV=development MEASURE_PERFORMANCE=true vite",
     "perf:analyze": "cross-env NODE_ENV=development MEASURE_PERFORMANCE=detailed vite",
+    "perf:maps": "cross-env NODE_ENV=development VITE_MEASURE_MAP_PERFORMANCE=detailed vite",
     "perf:report": "node scripts/performance-report.js",
     "perf:monitor": "cross-env NODE_ENV=development MEASURE_PERFORMANCE=true VITE_LOG_LEVEL=warn vite",
     "// プロジェクト管理": "----------------------------",
@@ -59,10 +59,10 @@
     "docs": "npx serve docs",
     "setup": "node scripts/dev-setup.js",
     "// 環境変数検証": "----------------------------",
-    "validate:env": "node scripts/validate-env.js",
-    "validate:env:ci": "cross-env CI=true node scripts/validate-env.js",
-    "validate:env:prod": "cross-env NODE_ENV=production node scripts/validate-env.js",
-    "validate:env:all": "node scripts/comprehensive-env-check.js",
+    "validate:env": "node scripts/comprehensive-env-check.js",
+    "validate:env:ci": "cross-env CI=true node scripts/comprehensive-env-check.js",
+    "validate:env:prod": "cross-env NODE_ENV=production node scripts/comprehensive-env-check.js",
+    "validate:maps": "cross-env VITE_CHECK_MAPS_ONLY=true node scripts/comprehensive-env-check.js",
     "// CI/CD連携": "----------------------------",
     "ci": "pnpm validate:env:ci && pnpm typecheck:ci && pnpm lint && pnpm test:ci",
     "ci:build": "pnpm ci && pnpm build:prod",
@@ -86,7 +86,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.23.0",
+    "@eslint/js": "^9.24.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -100,9 +100,9 @@
     "@vitest/ui": "^3.1.1",
     "cross-env": "^7.0.3",
     "depcheck": "^1.4.7",
-    "eslint": "^9.23.0",
+    "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
-    "eslint-import-resolver-typescript": "^4.3.1",
+    "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
@@ -115,11 +115,10 @@
     "rimraf": "^6.0.1",
     "rollup-plugin-visualizer": "^5.14.0",
     "sort-package-json": "^3.0.0",
-    "typescript": "^5.8.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.0",
     "vite": "^6.2.5",
     "vite-plugin-checker": "^0.9.1",
-    "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-inspect": "^11.0.0",
