--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "vite": "^6.2.5",
     "vite-plugin-checker": "^0.9.1",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-compression2": "^1.3.3",
     "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-inspect": "^11.0.0",
     "vite-plugin-mkcert": "^1.17.8",
