--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
 # ==============================================================================
-# 依存関係 - パッケージマネージャー管理ファイル
+# 依存関係と生成物
 # ==============================================================================
+# パッケージ管理
 node_modules/
 .npm/
 .pnpm-store/
-.yarn/
 
-# ==============================================================================
-# ビルド出力 - コンパイルおよび生成された成果物
-# ==============================================================================
-# コンパイル済みコード
+# ビルド出力
 dist/
 dist-ssr/
 build/
@@ -19,15 +16,13 @@ stats.html
 # TypeScript生成ファイル
 *.tsbuildinfo
 
-# PWA関連の生成ファイル
+# PWA関連ファイル
 dev-dist/
 **/sw.js.map
 **/workbox-*.js
 **/workbox-*.js.map
 **/service-worker.js
-**/*.js.LICENSE.txt
 **/pwa-cache/
-**/pwa-assets/
 
 # ==============================================================================
 # ローカル開発ファイル
@@ -35,70 +30,51 @@ dev-dist/
 *.local
 # ローカル環境ディレクトリ
 .local/
-!.local/localhost.crt
-!.local/localhost.key
 !.local/ssl/
 !.local/ssl/*.key
 !.local/ssl/*.crt
 
 # ==============================================================================
-# ログファイル - ロガー使用ガイドラインに準拠
+# ログファイル
 # ==============================================================================
 logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# ログ解析用の一時ファイル
-.log-archive/
-.log-temp/
+# パフォーマンス測定
 .performance-reports/
-.performance-snapshots/
-*perf-report*
-
-# 環境別ログファイル - サンプルを除外対象から除外
-.env.*.log
-!.env.*.log.example
 
 # ==============================================================================
 # テスト関連
 # ==============================================================================
 /coverage/
-/.nyc_output/
 test-results/
 playwright-report/
 /playwright/.cache/
 /vitest-coverage/
 __snapshots__/
-.vitest-cache/
 
 # ==============================================================================
-# 環境変数 - 環境変数管理ガイドラインに準拠
+# 環境変数
 # ==============================================================================
-# すべての環境ファイルを除外
+# 環境変数ファイル（セキュリティのため）
 .env*
 
-# サンプル環境ファイルは除外対象から除外
+# サンプルファイルは除外対象から除外
 !.env.example
-!.env.local.example
-!.env.development.example
-!.env.production.example
-!.env.test.example
 
 # GitHub Actions用シークレット
 .github/secrets/
 
 # ==============================================================================
-# エディタ設定 - プロジェクト共有の設定ファイルを除く
+# エディタ設定
 # ==============================================================================
-# VS Code
+# VS Code - プロジェクト共有設定のみ保持
 .vscode/*
 !.vscode/extensions.json
 !.vscode/settings.json
-!.vscode/launch.json
 !.vscode/tasks.json
 
 # その他のエディタ
