--- a/package.json
+++ b/package.json
@@ -11,63 +11,38 @@
     "pnpm": ">=10.0.0"
   },
   "scripts": {
-    "// 開発関連": "----------------------------",
+    "// 基本コマンド": "----------------------------",
     "dev": "cross-env NODE_ENV=development vite",
     "predev": "node scripts/comprehensive-env-check.js",
-    "dev:verbose": "cross-env NODE_ENV=development VITE_LOG_LEVEL=debug vite",
-    "dev:quiet": "cross-env NODE_ENV=development VITE_LOG_LEVEL=warn vite",
-    "dev:debugmode": "cross-env NODE_ENV=development VITE_DEBUG_MODE=true VITE_LOG_LEVEL=debug vite",
-    "dev:maps": "cross-env NODE_ENV=development VITE_LOG_LEVEL=debug VITE_MEASURE_MAP_PERFORMANCE=true vite",
-    "preview": "vite preview",
-    "start": "vite preview",
-    "// ビルド関連": "----------------------------",
     "build": "vite build",
     "prebuild": "node scripts/comprehensive-env-check.js",
-    "build:dev": "cross-env NODE_ENV=development vite build",
-    "build:prod": "cross-env NODE_ENV=production vite build",
-    "build:analyze": "cross-env ANALYZE=true MINIFY=true vite build",
-    "build:report": "cross-env ANALYZE=true REPORT_JSON=true vite build",
-    "build:maps": "cross-env NODE_ENV=production VITE_OPTIMIZE_MAPS=true VITE_ENABLE_MARKER_CLUSTERING=true vite build",
-    "build:maps:dev": "cross-env NODE_ENV=development VITE_OPTIMIZE_MAPS=true VITE_ENABLE_MARKER_CLUSTERING=true vite build",
-    "build:pwa": "cross-env NODE_ENV=production ENABLE_PWA=true vite build",
-    "build:offline": "cross-env NODE_ENV=production ENABLE_PWA=true ENABLE_OFFLINE=true vite build",
-    "// コード品質": "----------------------------",
-    "format": "prettier --write .",
-    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" --ignore-pattern \"dev-dist/**\" --fix --config eslint.config.js",
-    "lint:unused": "pnpm dlx depcheck",
-    "lint:all": "pnpm lint && pnpm format && pnpm typecheck",
-    "typecheck": "tsc --noEmit",
-    "typecheck:env": "tsc --noEmit src/utils/env.ts",
-    "typecheck:ci": "cross-env CI=true tsc --noEmit",
-    "// テスト関連": "----------------------------",
+    "preview": "vite preview",
     "test": "vitest run",
     "pretest": "node scripts/comprehensive-env-check.js",
-    "test:watch": "vitest",
+    "format": "prettier --write .",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src --fix",
+    "// 拡張コマンド": "----------------------------",
+    "start": "vite preview",
+    "dev:config": "cross-env NODE_ENV=development VITE_LOG_LEVEL=debug VITE_DEBUG_MODE=false VITE_MEASURE_MAP_PERFORMANCE=false vite",
+    "build:config": "cross-env NODE_ENV=production VITE_OPTIMIZE_MAPS=true VITE_ENABLE_MARKER_CLUSTERING=true ENABLE_PWA=false ENABLE_OFFLINE=false vite build",
+    "test:config": "cross-env VITE_LOG_LEVEL=error vitest run",
+    "lint:all": "pnpm lint:fix && pnpm format && pnpm typecheck",
     "test:coverage": "vitest run --coverage",
-    "test:a11y": "vitest run a11y",
-    "test:maps": "vitest run --config vitest.maps.config.ts",
-    "test:ui": "vitest --ui",
-    "test:ci": "cross-env CI=true VITE_LOG_LEVEL=error vitest run",
-    "// パフォーマンス関連": "----------------------------",
-    "perf:analyze": "cross-env NODE_ENV=development MEASURE_PERFORMANCE=detailed vite",
-    "perf:maps": "cross-env NODE_ENV=development VITE_MEASURE_MAP_PERFORMANCE=detailed vite",
-    "perf:report": "node scripts/performance-report.js",
-    "perf:monitor": "cross-env NODE_ENV=development MEASURE_PERFORMANCE=true VITE_LOG_LEVEL=warn vite",
+    "test:watch": "vitest",
+    "// 分析と最適化": "----------------------------",
+    "analyze:bundle": "cross-env ANALYZE=true MINIFY=true vite build",
+    "analyze:perf": "node scripts/performance-report.js",
+    "analyze:deps": "pnpm dlx depcheck",
     "// プロジェクト管理": "----------------------------",
     "prepare": "husky install",
-    "preprod": "pnpm lint:all && pnpm test && pnpm build:prod",
-    "prod:verify": "node scripts/verify-build.js",
     "clean": "rimraf node_modules pnpm-lock.yaml dist dev-dist stats.html .husky tsconfig.tsbuildinfo && pnpm store prune",
-    "docs": "npx serve docs",
-    "setup": "node scripts/dev-setup.js",
-    "// 環境変数検証": "----------------------------",
     "validate:env": "node scripts/comprehensive-env-check.js",
-    "validate:env:ci": "cross-env CI=true node scripts/comprehensive-env-check.js",
-    "validate:env:prod": "cross-env NODE_ENV=production node scripts/comprehensive-env-check.js",
-    "validate:maps": "cross-env VITE_CHECK_MAPS_ONLY=true node scripts/comprehensive-env-check.js",
+    "docs": "npx serve docs",
     "// CI/CD連携": "----------------------------",
-    "ci": "pnpm validate:env:ci && pnpm typecheck:ci && pnpm lint && pnpm test:ci",
-    "ci:build": "pnpm ci && pnpm build:prod",
+    "ci": "cross-env CI=true pnpm validate:env && pnpm typecheck && pnpm lint && pnpm test:config",
+    "ci:build": "pnpm ci && cross-env NODE_ENV=production vite build",
     "ci:deploy": "pnpm ci:build && node scripts/verify-build.js"
   },
   "dependencies": {
@@ -98,9 +73,7 @@
     "@typescript-eslint/parser": "^8.29.1",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.1.1",
-    "@vitest/ui": "^3.1.1",
     "cross-env": "^7.0.3",
-    "depcheck": "^1.4.7",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-import-resolver-typescript": "^4.3.2",
@@ -109,6 +82,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-security": "^3.0.1",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "lint-staged": "^15.5.0",
@@ -122,8 +96,6 @@
     "vite-plugin-checker": "^0.9.1",
     "vite-plugin-compression2": "^1.3.3",
     "vite-plugin-imagemin": "^0.6.1",
-    "vite-plugin-inspect": "^11.0.0",
-    "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-pwa": "^1.0.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.1",
@@ -151,11 +123,10 @@
     "package.json": "sort-package-json"
   },
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not op_mini all",
+    ">0.5%",
     "last 2 versions",
-    "not ie <= 11"
+    "not dead",
+    "not IE 11"
   ],
   "repository": {
     "type": "git",
