feat: Implement environment variable utilities and logging system
- Added environment variable utilities in `src/utils/env` including core, cache, transforms, validators, and Google Maps related functionalities.
- Created a comprehensive `getEnvironmentConfig` function to retrieve application settings.
- Developed a logging utility in `src/utils/logger` with various log levels and context handling.
- Defined types for environment configurations and logging in `src/types/env-types.ts` and `src/types/logger-types.ts`.
- Enhanced Vite and Vitest configurations for better environment handling and logging integration.
- Added Google Maps API extensions for marker clustering functionality.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pretest": "node scripts/comprehensive-env-check.js",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
+    "build:dts": "tsc --project tsconfig.node.json",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src --fix",
     "// 拡張コマンド": "----------------------------",
@@ -37,7 +38,7 @@
     "analyze:deps": "pnpm dlx depcheck",
     "// プロジェクト管理": "----------------------------",
     "prepare": "husky install",
-    "clean": "rimraf node_modules pnpm-lock.yaml dist dev-dist stats.html .husky tsconfig.tsbuildinfo && pnpm store prune",
+    "clean": "rimraf node_modules pnpm-lock.yaml dist dist-node dev-dist stats.html .husky tsconfig.tsbuildinfo && pnpm store prune",
     "validate:env": "node scripts/comprehensive-env-check.js",
     "docs": "npx serve docs",
     "// CI/CD連携": "----------------------------",
@@ -72,6 +73,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
