--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ES2020", "DOM", "DOM.Iterable", "ES2022"],
     "module": "ESNext",
     "skipLibCheck": true,
     "allowJs": true,
@@ -40,12 +40,24 @@
     }
   },
   "include": [
-    "src",
+    "src/**/*.ts",
+    "src/**/*.tsx",
     "env.d.ts", // 環境変数型定義
-    "react-extensions.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
+    "react-extensions.d.ts"
   ],
-  "exclude": ["node_modules", "dist", "build", ".tsbuildinfo", "coverage"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "dist-node",
+    "build",
+    ".tsbuildinfo",
+    "coverage",
+    "vite.config.ts",
+    "vitest.config.ts",
+    "config/**/*.ts",
+    "src/utils/env/**/*.ts",
+    "src/types/env-types.ts",
+    "src/utils/logger.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
