feat: Enhance map initialization and marker visibility debugging
- Updated MapInitializer to handle Google Maps API loading state, ensuring proper bounds and center settings.
- Improved MapMarkers component with enhanced debugging for markers and POIs, including visibility checks and error handling.
- Added debug helpers for logging marker and POI states, improving diagnostics during development.
- Strengthened error handling in useMapMarkers and useMarkerVisibility hooks to ensure robustness.
- Refactored environment variable retrieval to use getEnvVar consistently across utilities.
- Cleaned up imports and ensured type safety in various components and hooks.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "target": "ES2022", // モダンブラウザに最適化
     "useDefineForClassFields": true,
-    "lib": [
-      "ES2022",
-      "DOM",
-      "DOM.Iterable"
-    ], // 最新の標準ライブラリを活用
+    "lib": ["ES2022", "DOM", "DOM.Iterable"], // 最新の標準ライブラリを活用
     "module": "ESNext",
     "skipLibCheck": true,
     "allowJs": true,
@@ -37,9 +33,7 @@
     /* Path Aliases - コンポーネントとフィーチャーへのアクセスを最適化 */
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     }
   },
   "include": [
